# 2chamber_app

./: .env  .env.example  .gitignore  app.py  cert.pem  cli.py  config.py  db_core_entries.py  extensions.py  logging_setup.py  orchestration_parser.py  package-lock.json  package.json  pyproject.toml  wsgi.py
migrations/versions/: 000fa4238076_add_completion_type.py  029c9f1c16a0_.py  08ccec5cf685_.py  0b8e6c390369_.py  10997825a7b4_.py  110431faee14_.py  14268d1d40c7_.py  183358e601c1_.py  1acfc34f59e5_.py  285c33728f1c_academicyear_model_connected_with_.py  2a435a4003b3_add_email_to_teachers.py  2bb7038b602b_.py  307dae58138c_.py  3288b325ca9c_.py  4734de5e4a61_.py  4f08fb5fe46e_.py  57ce4e491e24_.py  61e4b8bc9a5f_.py  622dd578fb12_.py  645089ce9e2f_.py  645c05511d71_.py  69feecacdb40_.py  6a43a24cee3f_.py  6eb96d3c6918_.py  75e355465011_.py  7f101061dbb5_.py  7f1c48421f1b_.py  82122548e6be_.py  863858887a7d_.py  934576bccfed_.py  93f27fd79774_.py  9792714a1011_.py  a1b2c3d4e5f6_add_passkey_credentials.py  a77f31b5fd69_add_hour_donation_to_ensemble_teacher.py  b1c2d3e4f5a6_add_chamber_enrollment_requests.py  (+18 more)
models/: __init__.py  auth.py  core.py  ensembles.py  library.py  oracle.py  players.py  students.py  teachers.py
queries/: healt_case.py
scripts/: sync_skh_db_from_server_dump.sh  tailwind.sh
static/: manifest.json
templates/: base.html  dashboard.html  hero_page.html  settings.html
utils/: dashboard_helper.py  decorators.py  error_handlers.py  export_helpers.py  filter_helpers.py  import_oracle.py  nav.py  return_to.py  semesters.py  session_helpers.py
(+140 files in other folders)
