[project]
name = "2chamber-app"
version = "0.1.0"
description = "Application for managing chamber ensembles at HAMU"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.6",
    "aiosignal==1.3.2",
    "alembic==1.16.1",
    "attrs==25.3.0",
    "authlib==1.6.3",
    "blinker==1.9.0",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cryptography==45.0.3",
    "dotenv==0.9.9",
    "flask==3.1.1",
    "flask-login==0.6.3",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "flask-wtf==1.2.2",
    "frozenlist==1.6.0",
    "http-ece==1.2.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "multidict==6.4.4",
    "oracledb==3.3.0",
    "propcache==0.3.1",
    "psycopg2==2.9.10",
    "py-vapid==1.9.2",
    "pycparser==2.22",
    "python-dotenv==1.1.1",
    "pywebpush==2.0.3",
    "requests==2.32.3",
    "six==1.17.0",
    "sqlalchemy==2.0.41",
    "typing-extensions==4.13.2",
    "urllib3==2.4.0",
    "werkzeug==3.1.3",
    "wtforms==3.2.1",
    "wtforms-sqlalchemy==0.4.2",
    "yarl==1.20.0",
]
